--- a/posts/Blogs/LLM/LLM-Architecture/post.qmd
+++ b/posts/Blogs/LLM/LLM-Architecture/post.qmd
@@ -312,15 +312,15 @@ class RelPositionalEncoding(nn.Module):
 
 ## RoPE (Rotary Position Embedding)
 
-So far we have see the absolute position encoding and relative position encoding.  For example, for two sentence:
+So far we have see the absolute position encoding and relative position encoding.  However, there is an problem with absolute position encoding. For example, for two sentence:
 
 - Every Day I will go to gym
 - I will go to gym every day 
 
-The absolute position encoding is totally different from two sentences, even though they have the same words and means. The problem of the relative position encoding is that it does not capture the absolute position information, which is crucial for understanding the meaning of the sentences for some task such as text summarization. 
+The absolute position encoding is totally different from two sentences, even though they have the same words and means. On the other hand, the problem of the relative position encoding is that it does not capture the absolute position information, which is crucial for understanding the meaning of the sentences for some task such as text summarization. 
 
 
-RoPE [@RoFormerEnhancedTransformer2023su] is a method combine those two. The vector rotated certain degree according to the absolute position in the sentence. On the other hand, it relative position information is preserved. According to @eq-absolute-position-rotation, the relative position is not related to the position. 
+RoPE [@RoFormerEnhancedTransformer2023su] is a method combine those two. The vector rotated certain degree according to the *absolute position* in the sentence. On the other hand, it relative position information is preserved. According to @eq-absolute-position-rotation, the relative position is not related to the position. 
 
 
 ::: {#fig-rope}
@@ -330,6 +330,220 @@ RoPE [@RoFormerEnhancedTransformer2023su] is a method combine those two. The vec
 Illustration of RoPE    
 :::
 
+
+$$
+R_{\Theta,m}^{d} \mathbf{x}
+=
+\begin{pmatrix}
+x_1\\
+x_2\\
+x_3\\
+x_4\\
+\vdots\\
+x_{d-1}\\
+x_d
+\end{pmatrix}
+\otimes
+\begin{pmatrix} 
+\cos(m\theta_{1})\\
+\cos(m\theta_{1})\\
+\cos(m\theta_{2})\\
+\cos(m\theta_{2})\\
+\vdots\\
+\cos\!\big(m\theta_{d/2}\big)\\
+\cos\!\big(m\theta_{d/2}\big)
+\end{pmatrix}
++
+\begin{pmatrix}
+- x_2\\
+x_1\\
+- x_4\\
+x_3\\
+\vdots\\
+- x_d\\
+x_{d-1}
+\end{pmatrix}
+\otimes
+\begin{pmatrix}
+\sin(m\theta_{1})\\
+\sin(m\theta_{1})\\
+\sin(m\theta_{2})\\
+\sin(m\theta_{2})\\
+\vdots\\
+\sin\!\big(m\theta_{d/2}\big)\\
+\sin\!\big(m\theta_{d/2}\big)
+\end{pmatrix}
+$${#eq-rope-simple}
+
+where 
+
+$$
+\theta_{i,d} = \frac{1}{10,000^{2(i - 1) / d}} ,\quad i \in [1, 2, \dots, d / 2 ]
+$$
+
+
+
+As we can see, to implement the RoPE in code, we can:
+
+1. Construct `cos` and `sin` matrices for the given input dimensions and maximum position.
+2. Apply the rotation to the input embeddings using the constructed matrices.
+
+
+```{python}
+class RotaryEmbedding(nn.Module):
+    def __init__(self, head_dim, max_position_embedding, base):
+        super().__init__()
+
+        self.head_dim = head_dim
+        self.max_position_embedding = max_position_embedding
+        self.base = base 
+
+        # (head_dim // 2)
+        inv_freq = 1.0 / (base ** (torch.arange(0, head_dim, 2).float() / head_dim))
+        self.register_buffer("inv_freq", inv_freq)
+
+    def forward(self, x, position_ids, seq_len = None ):
+
+        # (head_dim // 2) => (1, head_dim // 2, 1) => (B, head_dim // 2, 1)
+        inv_freq_expanded = self.inv_freq[None, : , None].expand(x.size(0), -1, 1)
+
+        # (B, L)  => (B, 1, L)
+        position_ids_expanded = position_ids[:, None, :]
+
+        # Outer product 
+        freqs = (inv_freq_expanded @ position_ids_expanded).transpose(1, 2)
+        emb = torch.cat((freqs, freqs), dim=-1)  # (B, L, d_model)
+
+        cos = emb.cos()
+        sin = emb.sin()
+    
+        return cos, sin 
+
+def rotate_half(x):
+    """
+    Rotate the last dimension of x by half.
+    """
+    x1 = x[..., : x.shape[-1] // 2] 
+    x2 = x[..., x.shape[-1] // 2 :] 
+    return torch.cat((-x2, x1), dim=-1)
+
+
+def apply_rotary_pos_emb(q, k, cos, sin, unsqueeze_dim=1):
+    # (B, L, head_dim) => (B, 1, L, head_dim)
+    cos = cos.unsqueeze(unsqueeze_dim) # Add the head dimension
+    sin = sin.unsqueeze(unsqueeze_dim) # Add the head dimension
+
+    q_embed = (q * cos) + (rotate_half(q) * sin)
+    k_embed = (k * cos) + (rotate_half(k) * sin)
+    return q_embed, k_embed
+```
+
+::: {.callout-note}
+One thing always bother me about this implementation is that the `rotate_half` function actually swap pair of the last dimension as mentioned in the paper. For example:
+```Python
+>>> x = torch.arange(0, 24).reshape(3, 8) # (B, D)
+>>> x
+tensor([[ 0,  1,  2,  3,  4,  5,  6,  7],
+        [ 8,  9, 10, 11, 12, 13, 14, 15],
+        [16, 17, 18, 19, 20, 21, 22, 23]])
+>>> x1 = rotate_half(x)
+>>> x1
+tensor([[ -4,  -5,  -6,  -7,   0,   1,   2,   3],
+        [-12, -13, -14, -15,   8,   9,  10,  11],
+        [-20, -21, -22, -23,  16,  17,  18,  19]])
+```
+The above function just change the x to `[-x_{d//2}, ..., -x_{d}, x_0, ..., x_{d//2-1}]`
+
+Check this [link](https://discuss.huggingface.co/t/is-llama-rotary-embedding-implementation-correct/44509/3)if you are interested.
+
+
+If this really bother you, you can just implement like this: 
+```Python
+def rotate_half_v2(x):
+    # Assume x is (B, D)
+    x = x.reshape(x.shape[0], -1, 2)
+    x1, x2 = x.unbind(dim = -1)
+    x = torch.stack((-x2, x1), dim = -1)
+    return x.reshape(x.shape[0], -1)
+```
+which is same as they mentioned in the paper. 
+```Python
+>>> x
+tensor([[ 0,  1,  2,  3,  4,  5,  6,  7],
+        [ 8,  9, 10, 11, 12, 13, 14, 15],
+        [16, 17, 18, 19, 20, 21, 22, 23]])
+>>> x2 = rotate_half_v2(x)
+>>> x2
+tensor([[ -1,   0,  -3,   2,  -5,   4,  -7,   6],
+        [ -9,   8, -11,  10, -13,  12, -15,  14],
+        [-17,  16, -19,  18, -21,  20, -23,  22]])
+```
+
+Or
+```Python
+def rotate_half_v3(x: torch.Tensor) -> torch.Tensor:
+    y = torch.empty_like(x)
+    y[..., ::2] = -x[..., 1::2]  # even positions get -odd
+    y[..., 1::2] =  x[..., ::2]  # odd positions get even
+    return y
+
+>>> x3 = rotate_half_v3(x)
+>>> x3
+tensor([[ -1,   0,  -3,   2,  -5,   4,  -7,   6],
+        [ -9,   8, -11,  10, -13,  12, -15,  14],
+        [-17,  16, -19,  18, -21,  20, -23,  22]])
+```
+:::
+
+The other implementation of the RoPE is reply on the complex number. We can treat 2D vector $(x, y)$ as a complex number $z = x + iy$, and the rotation can be done by multiplying with a complex exponential:
+
+$$
+z' = z \cdot e^{i\theta} = (x + iy) \cdot (\cos \theta + i \sin \theta) = (x \cos \theta - y \sin \theta) + i (x \sin \theta + y \cos \theta)
+$$
+
+
+Code adapted from [LLaMA model](https://github.com/meta-llama/llama/blob/main/llama/model.py#L132)
+
+```{python}
+import torch
+from typing import Tuple
+
+def precompute_freqs_cis(dim: int, end: int, theta: float = 10000.0) -> torch.Tensor:
+    """
+    Returns freqs_cis with shape (end, dim//2), dtype complex64.
+    """
+    assert dim % 2 == 0, "head_dim (dim) must be even"
+    freqs = 1.0 / (theta ** (torch.arange(0, dim, 2, dtype=torch.float32) / dim))
+    t = torch.arange(end, device=freqs.device, dtype=torch.float32)          # (end,)
+    angles = torch.outer(t, freqs)                                           # (end, dim//2)
+    freqs_cis = torch.polar(torch.ones_like(angles), angles)                 # complex64
+    return freqs_cis
+
+def apply_rotary_emb(
+    xq: torch.Tensor,   # (B, T, H, D)
+    xk: torch.Tensor,   # (B, T, H, D)
+    freqs_cis: torch.Tensor,  # (T, D//2) complex
+) -> Tuple[torch.Tensor, torch.Tensor]:
+    """
+    Complex RoPE multiply with inline broadcasting reshape (no helper).
+    """
+    B, T, H, D = xq.shape
+    assert xk.shape == (B, T, H, D)
+    assert D % 2 == 0
+    assert freqs_cis.shape == (T, D // 2), f"expected {(T, D//2)}, got {freqs_cis.shape}"
+
+    # view as complex: (..., D/2)
+    xq_c = torch.view_as_complex(xq.float().reshape(B, T, H, D // 2, 2))
+    xk_c = torch.view_as_complex(xk.float().reshape(B, T, H, D // 2, 2))
+
+    # INLINE reshape for broadcasting: (1, T, 1, D/2)
+    freqs_cis_b = freqs_cis.view(1, T, 1, D // 2)
+
+    # rotate and return to real, original shape & dtype
+    xq_out = torch.view_as_real(xq_c * freqs_cis_b).reshape_as(xq).type_as(xq)
+    xk_out = torch.view_as_real(xk_c * freqs_cis_b).reshape_as(xk).type_as(xk)
+    return xq_out, xk_out
+```
 
 ## ALIBI
 [@TrainShortTest2022press]
@@ -393,8 +607,13 @@ One generalizable lesson is that we should keep residual connections “clean”
 
 
 
+## QK Norm
+There is another normalization method called Query-Key Normalization (QK Norm), which is designed to improve the attention mechanism by normalizing the query and key vectors before computing the attention scores. 
+
+
+
 # Attention Mechanism
-Now, we have arrive the most important component of the transformer architecture: the attention mechanism. There are many efforts and research directions aimed at improving the attention mechanism. we first discuss the standard multi-headed attention, proposed in [@AttentionIsAllYouNeed2017vaswani]. And than analysis the time complexity of the the algorithm. Layer see different improvements through change algorithm or better utilize the hardware. 
+Now, we have arrive the most important component of the transformer architecture: the attention mechanism. There are many efforts and research directions aimed at improving the attention mechanism. we first discuss the standard multi-headed attention, proposed in [@AttentionAllYou2023vaswani]. And than analysis the time complexity of the the algorithm. Layer see different improvements through change algorithm or better utilize the hardware. 
 
 ## Multi Headed Attention 
 
