--- a/posts/blogs.qmd
+++ b/posts/blogs.qmd
@@ -12,7 +12,7 @@ listing:
   filter-ui: false
   fields: [title, author, reading-time, description, word-count, categories, file-modified]
   
-
+author: ""
 page-layout: full
 title-block-banner: true
 title-block-banner-align: left
